--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,19 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
+}
+allure {
+    report {
+        version.set("2.19.0")
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5{
+                adapterVersion.set("2.19.0")
+            }
+        }
+    }
 }
 
 repositories {
@@ -11,10 +25,17 @@ dependencies {
             "com.codeborne:selenide:6.16.0",
             "com.github.javafaker:javafaker:1.0.2",
             "org.junit.jupiter:junit-jupiter:5.9.3",
-            "org.slf4j:slf4j-simple:2.0.6"
+            "org.slf4j:slf4j-simple:2.0.6",
+            'io.qameta.allure:allure-selenide:2.19.0'
     )
 }
 
 test {
     useJUnitPlatform()
+}
+
+task simple_test(type: Test){
+    useJUnitPlatform{
+        includeTags("simple")
+    }
 }
