--- a/build.gradle
+++ b/build.gradle
@@ -44,3 +44,8 @@ task remote_test(type: Test) {
         includeTags("remote")
     }
 }
+task homework_test(type: Test) {
+    useJUnitPlatform {
+        includeTags("homework")
+    }
+}
